// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic test suite > clicks the button on the client side 1`] = `
<x-button>
    <template shadowroot="open">
        <span>
            <code>
                Is this SSR?
            </code>
            : false
        </span>
        <span>
            <code>
                Was I clicked?
            </code>
            : true
        </span>
        <button class="pretty">
            I am a button!
        </button>
    </template>
</x-button>
`;

exports[`basic test suite > renders a button on the client side 1`] = `
<x-button>
    <template shadowroot="open">
        <span>
            <code>
                Is this SSR?
            </code>
            : false
        </span>
        <span>
            <code>
                Was I clicked?
            </code>
            : false
        </span>
        <button class="pretty">
            I am a button!
        </button>
    </template>
</x-button>
`;
